work on ios design issue fix

--- a/src/app/auth/login/login.page.scss
+++ b/src/app/auth/login/login.page.scss
@@ -43,7 +43,7 @@ ion-header{
 ion-select.custom-options,ion-input.number-fld{
        background-color: #fff;
        border-radius: 11px;
-       padding: 10px;
+       padding: 10px !important;
        box-shadow: 0px 3px 10px 1px #cbcbcb;
        height: 49px;
 }
