--- a/src/global.scss
+++ b/src/global.scss
@@ -52,16 +52,22 @@ ion-searchbar ion-icon {
 ion-searchbar .searchbar-input{
     --padding-left: 0;
 }
-.searchbar-input.sc-ion-searchbar-md{
-    padding-left: 15px;
+.searchbar-input.sc-ion-searchbar-md,.searchbar-input.sc-ion-searchbar-ios{
+    padding-left: 15px !important;
     background-color: #0AAAB0;
     border:#0AA1A8 1px solid;
     border-radius: 8px;
     box-shadow: none;
     color: #fff;
 }
-.searchbar-input.sc-ion-searchbar-md::placeholder{
+.searchbar-input.sc-ion-searchbar-md::placeholder,.searchbar-input.sc-ion-searchbar-ios::placeholder{
+    color: #fff;
+    opacity: 1;
+}
+.searchbar-input.sc-ion-searchbar-ios::placeholder{
     color: #fff;
     opacity: 1;
 }
 .searchbar-has-value.searchbar-should-show-clear.sc-ion-searchbar-md-h .searchbar-clear-button.sc-ion-searchbar-md{ display: none;}
+
+.searchbar-has-value.searchbar-should-show-clear.sc-ion-searchbar-ios-h .searchbar-clear-button.sc-ion-searchbar-ios{ display: none;}
